# software_metrics_practices

./: README.md
practice1/: output.csv  practice1.py  readme.md
practice1/gnuit-4.9.5/: .gitignore  AUTHORS  ChangeLog  LSM.in  Makefile.am  Makefile.in  NEWS  PLATFORMS  PROBLEMS  README  aclocal.m4  config.h.in  configure  configure.ac  gnuit.spec.in  mkvcs  prepare  version.h.in
practice1/gnuit-4.9.5.und/: id.txt  settings.xml
practice1/gnuit-4.9.5/doc/: Makefile.am  Makefile.in  dpkg-help.txt  git.1  gitaction.1  gitdpkgname.1  gitfm.1  gitinternal.1  gitkeys.1  gitmount.1  gitps.1  gitrgrep.1  gitunpack.1  gitview.1  gitwipe.1  gnuit.info  gnuit.texinfo
practice1/gnuit-4.9.5/lib/: Makefile.am  Makefile.in
practice1/gnuit-4.9.5/m4/: gnulib-cache.m4  gnulib-comp.m4
practice1/gnuit-4.9.5/src/: .gdbinit  .gitaction  ChangeLog  Makefile.am  Makefile.in  ansi_stdlib.h  configure.c  configure.h  file.h  git.c  git.transition  gitaction  gitdpkgname  gitkeys.c  gitmkdirs  gitmount  gitps.c  gitrgrep  gitunpack  gitview.c  gitwhich.c  gitwipe.c  gitxgrep  history.c  history.h  inputline.c  inputline.h  misc.c  misc.h  panel.c  panel.h  signals.c  signals.h  stat.h  status.c  status.h  stdc.h  system.c  system.h  tilde.c  (+15 more)
practice1/gnuit-4.9.5/term/: ChangeLog  Makefile.am  Makefile.in  gnuitrc.aixterm.in  gnuitrc.ansi.in  gnuitrc.common.IN  gnuitrc.generic.in  gnuitrc.hft.in  gnuitrc.hpterm.in  gnuitrc.linux-m.in  gnuitrc.linux.in  gnuitrc.mach.in  gnuitrc.minix.in  gnuitrc.thix.in  gnuitrc.vt100.in  gnuitrc.vt102.in  gnuitrc.xterm-color.in  gnuitrc.xterm.in
practice2/: main.py  output.csv  readme.md
practice2/bash-4.2/bash-4.2.und/: id.txt  settings.xml
practice2/bash-4.21.und/: id.txt
practice2/practice2/: readme.md
practice2/practice2/bash-4.21.und/: settings.xml
practice3/: install_library.r  main.r  readme.md  result_a.csv  result_b.csv
practice3/results/: result_b.csv  result_d_auc.csv  result_d_ce.csv
practice4/: Practice4.md  main.py  readme.md
practice4/gcc-3.4.0/: .brik  BUGS  LAST_UPDATED  bugs.html
practice4/gcc-3.4.0.und/: id.txt  settings.xml
practice4/gcc-3.4.0/INSTALL/: binaries.html  build.html  download.html  finalinstall.html  prerequisites.html  specific.html  test.html
practice4/gcc-3.4.0/fastjar/: fastjar.info  grepjar.1  jar.1
practice4/gcc-3.4.0/gcc/: NEWS  c-parse.c  c-parse.y  gengtype-lex.c  gengtype-yacc.c
practice4/gcc-3.4.0/gcc/doc/: cpp.1  cpp.info  cppinternals.info  fsf-funding.7  g77.1  g77.info  gcc.1  gcc.info  gccinstall.info  gccint.info  gcj.1  gcj.info  gcjh.1  gcov.1  gfdl.7  gij.1  gpl.7  jcf-dump.1  jv-convert.1  jv-scan.1  rmic.1  rmiregistry.1
practice4/gcc-3.4.0/gcc/f/: BUGS  NEWS
practice4/gcc-3.4.0/gcc/java/: parse-scan.c  parse.c
practice4/gcc-3.4.0/gcc/objc/: objc-parse.c  objc-parse.y
practice4/gcc-3.4.0/gcc/po/: be.gmo  da.gmo  de.gmo  el.gmo  es.gmo  fr.gmo  ja.gmo  nl.gmo  sv.gmo  tr.gmo
practice5/: main.py  readme.md
practice5/data/: proftpd.csv  wuftpd.csv
practice5/data/proftpd-1.3.5b.und/: id.txt  settings.xml
practice5/data/wu-ftpd-2.6.2.und/: id.txt  settings.xml
